# ReallyFast_MVC_Solver

./: .gitignore  CMakeLists.txt  Dockerfile  README.MD  disjoint.case  elbo.h  graph.h  main.cpp  main.o3.s.txt  main.s.txt  reduction.h  run_local_test.sh  run_prod.sh  solver.h  startup.sh  type.h  utils.h
archive/: graph.h  main.ass.cpp  main.base.cpp  main.cpp
data/input/: default.case  grid-56-97  grid-72-127
notes/: cppargs
test/: main.py
